feat: implement Create collection endpoint, create item/location inside a collection, Firestore wiring

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "turbo": "latest"
     },
     "packageManager": "pnpm@8.6.10",
-    "name": "full-stack"
+    "name": "full-stack",
+    "dependencies": {
+        "typescript": "^5.9.3"
+    }
 }
