--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
     "main": "server.ts",
     "license": "MIT",
     "dependencies": {
+        "@full-stack/common": "1.0.0",
+        "@full-stack/types": "1.0.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "firebase": "^9.17.2",
@@ -11,13 +13,12 @@
         "node-fetch": "^2.7.0",
         "path": "^0.12.7",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.5",
-        "@full-stack/types": "1.0.0",
-        "@full-stack/common": "1.0.0"
+        "typescript": "^4.9.5"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.3",
+        "@types/node": "18",
         "@types/node-fetch": "^2.6.8",
         "nodemon": "^2.0.21"
     },
