--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "dependencies": {
         "@full-stack/common": "1.0.0",
-        "@full-stack/types": "1.0.0",
+        "@full-stack/types": "workspace:*",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "firebase": "^9.17.2",
