--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "packageManager": "pnpm@8.6.10",
     "name": "full-stack",
     "dependencies": {
+        "full-stack": "^1.0.2",
         "typescript": "^5.9.3"
     }
 }
