--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,9 @@
         "@tiptap/extension-link": "^2.1.1",
         "@tiptap/react": "^2.1.1",
         "@tiptap/starter-kit": "^2.1.1",
+        "@vis.gl/react-google-maps": "^1.7.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "dayjs": "^1.11.9",
         "embla-carousel-react": "8.0.0-rc11",
         "localforage": "^1.10.0",
@@ -37,7 +40,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
-        "sort-by": "^1.2.0"
+        "sort-by": "^1.2.0",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20.8.9",
@@ -47,10 +52,13 @@
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react-swc": "^3.3.2",
+        "autoprefixer": "^10.4.22",
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
-        "typescript": "^5.0.2",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.17",
+        "typescript": "^5.9.3",
         "vite": "^4.4.5"
     }
 }
