--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,14 +6,18 @@
         "module": "ESNext",
         "skipLibCheck": true,
 
-        /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
+        "moduleResolution": "node",
+        /*"allowImportingTsExtensions": true,*/
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
 
+        "baseUrl": ".",
+        "paths": {
+          "@/*": ["./src/*"]
+        },
+        
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
@@ -24,3 +28,4 @@
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
+
