--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,7 @@
         "composite": true,
         "emitDeclarationOnly": true,
         "allowImportingTsExtensions": true,
+        "allowSyntheticDefaultImports": true,
         
         // "resolveJsonModule": true,
         "isolatedModules": true,
