--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
         "@mantine/prism": "^6.0.19",
         "@mantine/spotlight": "^6.0.19",
         "@mantine/tiptap": "^6.0.19",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-slot": "^1.2.4",
         "@tabler/icons-react": "^2.30.0",
         "@tiptap/extension-link": "^2.1.1",
         "@tiptap/react": "^2.1.1",
