--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,14 @@
         "@mantine/prism": "^6.0.19",
         "@mantine/spotlight": "^6.0.19",
         "@mantine/tiptap": "^6.0.19",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-slot": "^1.2.4",
         "@tabler/icons-react": "^2.30.0",
         "@tiptap/extension-link": "^2.1.1",
         "@tiptap/react": "^2.1.1",
         "@tiptap/starter-kit": "^2.1.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "dayjs": "^1.11.9",
         "embla-carousel-react": "8.0.0-rc11",
         "localforage": "^1.10.0",
@@ -37,7 +41,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
-        "sort-by": "^1.2.0"
+        "sort-by": "^1.2.0",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20.8.9",
@@ -47,9 +53,12 @@
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react-swc": "^3.3.2",
+        "autoprefixer": "^10.4.22",
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.17",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
     }
