--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.17",
         "@types/node": "^20.8.9",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
