--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
         "types": ["node"]
     },
     "exclude": ["node_modules"],
-    "include": ["**/*.ts", "**/*.json"]
+    "include": ["**/*.ts", "**/*.json", "frontend/src/components/LocationCard.tsx"]
 }
