--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "firebase-admin": "^11.5.0",
         "node-fetch": "^2.7.0",
         "path": "^0.12.7",
+        "dotenv": "^16.4.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     },
